--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,25 +1,40 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Ntalk - Agenda de contatos</title>
-</head>
-<body>
-  <header>
-    <h1>Ntalk</h1>
-    <h4>Bem-vindo!</h4>
+<% include ../header %>
+
+<div class="container-fluid">
+
+  <header class="row-fluid text-center">
+    <h1 id="titulo">
+      Ntalk
+      <p><small>Bem vindo!</small></p>
+    </h1>
   </header>
-  <section>
-    <form action="/entrar" method="post">
-      <input type="text" name="nome" placeholder="Seu nome">
-      <br>
-      <input type="text" name="email" placeholder="Seu e-mail">
-      <br>
-      <button type="submit">Entrar</button>
-    </form>
+
+  <section class="row-fluid" id="form-login">
+    <div class="col-md-6 col-md-offset-4">
+
+      <form action="/entrar" method="post" class="form-horizontal">
+        <div class="form-group">
+          <div class="col-sm-4">
+            <input type="text" name="usuario[nome]" class="form-control" id="inputName" placeholder="Digite seu nome">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-4">
+            <input type="email" name="usuario[email]" class="form-control" id="inputEmail" placeholder="Digite seu e-mail">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-offset-4 col-sm-4">
+            <button type="submit" class="btn btn-success">Entrar</button>
+          </div>
+        </div>
+      </form>
+
+    </div>
   </section>
-  <footer>
-    <small>Ntalk - Agenda de contatos</small>
-  </footer>
-</body>
-</html>
+
+</div>
+
+<% include ../footer %>
