--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Ntalk - Agenda de contatos</title>
+  <title><%= title %></title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
   <link rel="stylesheet" href="stylesheets/style.css" />
 </head>
