--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -15,13 +15,13 @@
       <form action="/entrar" method="post" class="form-horizontal">
         <div class="form-group">
           <div class="col-sm-4">
-            <input type="text" name="usuario[nome]" class="form-control" id="inputName" placeholder="Digite seu nome">
+            <input type="text" name="usuarionome" class="form-control" id="inputName" placeholder="Digite seu nome">
           </div>
         </div>
 
         <div class="form-group">
           <div class="col-sm-4">
-            <input type="email" name="usuario[email]" class="form-control" id="inputEmail" placeholder="Digite seu e-mail">
+            <input type="text" name="usuario[email]" class="form-control" id="inputEmail" placeholder="Digite seu e-mail">
           </div>
         </div>
 
