--- a/views/contatos/index.ejs
+++ b/views/contatos/index.ejs
@@ -3,7 +3,8 @@
   <h2>Ntalk - Agenda de contatos</h2>
 </header>
 <section>
-  <p>Bem vindo <%= usuario %> </p>
+  <p>Bem vindo <%= usuario.nome %> </p>
+  <p>Seu email é: <%= usuario.email %> </p>
 </section>
 
 <% include ../exit %>
