--- a/views/contatos/index.ejs
+++ b/views/contatos/index.ejs
@@ -3,9 +3,37 @@
   <h2>Ntalk - Agenda de contatos</h2>
 </header>
 <section>
-  <p>Bem vindo <%= usuario.nome %> </p>
-  <p>Seu email é: <%= usuario.email %> </p>
-</section>
 
-<% include ../exit %>
-<% include ../footer %>
+  <form action="/contato" method="post">
+    <input type="text" name="contato[nome]" placeholder="Nome">
+    <input type="email" name="contato[email]" placeholder="E-mail">
+    <button type="submit">Cadastrar</button>
+  </form>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Nome</th>
+        <th>E-mail</th>
+        <th>Ação</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% contatos.forEach(function(contato, index) { %>
+        <tr>
+          <td><%- contato.nome %></td>
+          <td><%- contato.email %></td>
+          <td>
+            <a href="/contato/<%= index %>">Detalhes</a>
+          </td>
+        </tr>
+        <% }) %>
+      </tbody>
+
+    </table>
+
+  </section>
+
+  <% include ../exit %>
+  <% include ../footer %>
