--- a/views/chat/index.ejs
+++ b/views/chat/index.ejs
@@ -1,9 +1,13 @@
 <% include ../header %>
 
 <script src="/socket.io/socket.io.js"></script>
-
 <script>
-var socket = io.connect('http://localhost:3000');
+if(window.location.hostname == 'localhost') {
+  var socket = io.connect(window.location.hostname+":3000");
+} else {
+  var socket = io.connect(window.location.hostname);
+  console.log(window.location.hostname);
+}
 socket.on('send-client', function(msg){
   document.getElementById('chat').innerHTML += msg;
 });
