--- a/views/chat/index.ejs
+++ b/views/chat/index.ejs
@@ -8,6 +8,8 @@ if(window.location.hostname == 'localhost') {
   var socket = io.connect(window.location.hostname);
 }
 
+socket.emit('join', '<%= sala %>');
+
 socket.on('send-client', function(msg){
   document.getElementById('chat').innerHTML += msg;
 });
@@ -24,7 +26,7 @@ var enviar = function(){
 <section>
   <pre id="chat"></pre>
   <input type="text" id="msg" placeholder="Mensagem">
-  <button onclick="enviar();">Enviar</button>
+  <input type="button" onclick="enviar();" value="Enviar">
 </section>
 
 <% include ../exit %>
