--- a/views/contatos/index.ejs
+++ b/views/contatos/index.ejs
@@ -15,6 +15,7 @@
       <tr>
         <th>Nome</th>
         <th>E-mail</th>
+        <th>Status</th>
         <th>Ação</th>
       </tr>
     </thead>
@@ -22,11 +23,12 @@
     <tbody>
       <% contatos.forEach(function(contato, index) { %>
         <tr>
-          <td><%- contato.nome %></td>
-          <td><%- contato.email %></td>
+          <td><%= contato.nome %></td>
+          <td><%= contato.email %></td>
+          <td><span id="notify_<%= contato.email %>">Offline</span></td>
           <td>
             <a href="/contato/<%= index %>">Detalhes</a>
-            <a href="/chat/<%= contato.email %>">Conversar</a>
+            <a href="/chat/<%= contato.email %>" id="chat_<%= contato.email %>">Conversar</a>
           </td>
         </tr>
         <% }) %>
@@ -36,5 +38,6 @@
 
   </section>
 
+  <% include notify_script %>
   <% include ../exit %>
   <% include ../footer %>
