--- a/views/exit.ejs
+++ b/views/exit.ejs
@@ -1,3 +1,3 @@
-<section>
-  <a href="/sair">Sair</a>
+<section class="row-fluid text-right">
+  <a href="/sair" class="btn btn-warning">Sair</a>
 </section>
