--- a/views/contatos/index.ejs
+++ b/views/contatos/index.ejs
@@ -1,41 +1,42 @@
 <% include ../header %>
-<header>
-  <h2>Ntalk - Agenda de contatos</h2>
+<header class="row-fluid text-center">
+  <h2>Agenda de contatos</h2>
 </header>
-<section>
+<section class="row-fluid">
+  <section class="span12">
 
-  <form action="/contato" method="post">
-    <input type="text" name="contato[nome]" placeholder="Nome">
-    <input type="email" name="contato[email]" placeholder="E-mail">
-    <button type="submit">Cadastrar</button>
-  </form>
+    <form action="/contato" method="post" class="well form-inline">
+      <input type="text" name="contato[nome]" placeholder="Nome">
+      <input type="email" name="contato[email]" placeholder="E-mail">
+      <button type="submit" class="btn btn-primary">Cadastrar</button>
+    </form>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Nome</th>
-        <th>E-mail</th>
-        <th>Status</th>
-        <th>Ação</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% contatos.forEach(function(contato, index) { %>
+    <table class="table well">
+      <thead>
         <tr>
-          <td><%= contato.nome %></td>
-          <td><%= contato.email %></td>
-          <td><span id="notify_<%= contato.email %>">Offline</span></td>
-          <td>
-            <a href="/contato/<%= index %>">Detalhes</a>
-            <a href="/chat/<%= contato.email %>" id="chat_<%= contato.email %>">Conversar</a>
-          </td>
+          <th>Nome</th>
+          <th>E-mail</th>
+          <th>Status</th>
+          <th>Ação</th>
         </tr>
-        <% }) %>
-      </tbody>
-
-    </table>
-
+      </thead>
+      <tbody>
+        <% contatos.forEach(function(contato, index) { %>
+          <tr>
+            <td><%= contato.nome %></td>
+            <td><%= contato.email %></td>
+            <td>
+              <span id="notify_<%= contato.email %>" class="label label-default">Offline</span>
+            </td>
+            <td>
+              <a href="/contato/<%= index %>" class="btn btn-default">Detalhes</a>
+              <a href="/chat/<%= contato.email %>" id="chat_<%= contato.email %>" class="btn btn-info">Conversar</a>
+            </td>
+          </tr>
+          <% }) %>
+        </tbody>
+      </table>
+    </section>
   </section>
 
   <% include notify_script %>
