--- a/views/contatos/show.ejs
+++ b/views/contatos/show.ejs
@@ -1,16 +1,23 @@
 <% include ../header %>
-<header>
-  <h2>Ntalk - Dados do contato</h2>
+<header class="row-fluid text-center">
+  <h2>Dados do contato</h2>
 </header>
-<section>
+<section class="row-fluid text-center">
   <form action="/contato/<%= id %>?_method=DELETE" method="post">
-    <!-- <input type="hidden" name="_method" value="delete"> -->
-    <p><label>Nome:</label><%= contato.nome %></p>
-    <p><label>E-mail:</label><%= contato.email %></p>
-    <p>
-      <button type="submit">Excluir</button>
-      <a href="/contato/<%= id %>/editar">Editar</a>
-    </p>
+    <fieldset disabled>
+      <div class="form-group">
+        <label>Nome:</label>
+        <input type="text" class="form-control edit-input" placeholder="<%= contato.nome %>" disabled>
+      </div>
+      <div class="form-group">
+        <label>E-mail:</label>
+        <input type="text" class="form-control edit-input" placeholder="<%= contato.email %>" disabled>
+      </div>
+    </fieldset disabled>
+
+      <a href="/contato/<%= id %>/editar" class="btn btn-info">Editar</a>
+      <button type="submit" class="btn btn-danger">Excluir</button>
+
   </form>
 </section>
 <% include ../exit %>
