--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,9 +1,9 @@
 
-<div class="container-fluid">
-  <footer class="text-center">
+<footer>
+  <div class="text-center">
     <small>Ntalk - Created by <a href="https://github.com/marlonfurtado/ntalk" target="_blank">Marlon Furtado</a></small>
-  </footer>
-</div>
+  </div>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" ></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
