--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,6 +4,6 @@
   <meta charset="utf-8">
   <title><%= title %></title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../stylesheets/style.css" />
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
